--- a/x11/xf86-video-ati/Makefile
+++ b/x11/xf86-video-ati/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.47 2018/09/16 20:28:51 triaxx Exp $
+# $NetBSD: Makefile,v 1.48 2019/03/07 23:24:37 wiz Exp $
 
-DISTNAME=	xf86-video-ati-18.1.0
+DISTNAME=	xf86-video-ati-19.0.0
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=driver/}
 EXTRACT_SUFX=	.tar.bz2
