--- a/textproc/mandoc/Makefile
+++ b/textproc/mandoc/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.9 2018/10/11 12:19:04 leot Exp $
+# $NetBSD: Makefile,v 1.10 2019/03/07 23:29:01 wiz Exp $
 
 DISTNAME=	mandoc-1.14.4
 PKGREVISION=	2
 CATEGORIES=	textproc devel
-MASTER_SITES=	http://mdocml.bsd.lv/snapshots/
+MASTER_SITES=	http://mandoc.bsd.lv/snapshots/
 
 MAINTAINER=	schwarze@usta.de
-HOMEPAGE=	http://mdocml.bsd.lv/
+HOMEPAGE=	http://mandoc.bsd.lv/
 COMMENT=	Convert man pages from mdoc, man, eqn and tbl to txt, html, ps, or pdf
 LICENSE=	2-clause-bsd # not exactly, but near enough
 
