--- a/devel/p5-Module-Load/Makefile
+++ b/devel/p5-Module-Load/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2018/08/22 09:44:18 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2019/03/08 15:10:33 wen Exp $
 
-DISTNAME=	Module-Load-0.32
+DISTNAME=	Module-Load-0.34
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	5
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Module/}
 
