--- a/mail/isync/Makefile
+++ b/mail/isync/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.42 2019/03/08 18:14:45 ryoon Exp $
+# $NetBSD: Makefile,v 1.43 2019/03/08 18:16:06 ryoon Exp $
 
 DISTNAME=	isync-1.3.0
-PKGRESISION=	1
+PKGREVISION=	1
 CATEGORIES=	mail net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=isync/}
 
