--- a/devel/ruby-pkg-config/Makefile
+++ b/devel/ruby-pkg-config/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.22 2019/02/25 16:42:23 taca Exp $
+# $NetBSD: Makefile,v 1.23 2019/03/09 13:13:01 tsutsui Exp $
 
-DISTNAME=	pkg-config-1.3.4
+DISTNAME=	pkg-config-1.3.6
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
