--- a/graphics/ruby-cairo/Makefile
+++ b/graphics/ruby-cairo/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2018/11/14 22:21:45 kleink Exp $
+# $NetBSD: Makefile,v 1.13 2019/03/09 13:50:22 tsutsui Exp $
 
-DISTNAME=		cairo-1.16.2
-PKGREVISION=		1
+DISTNAME=		cairo-1.16.4
 CATEGORIES=		graphics
 
 MAINTAINER=		tsutsui@NetBSD.org
