--- a/geography/gdal-lib/Makefile.common
+++ b/geography/gdal-lib/Makefile.common
@@ -1,12 +1,15 @@
-# $NetBSD: Makefile.common,v 1.3 2019/03/09 01:54:59 gdt Exp $
+# $NetBSD: Makefile.common,v 1.4 2019/03/09 17:39:01 gdt Exp $
 #
 # used by geography/gdal-lib/Makefile
 # used by geography/py-gdal/Makefile
 
-VERSION=	2.3.3
+VERSION=	2.4.0
 DISTNAME=	gdal-${VERSION}
 CATEGORIES=	geography
 MASTER_SITES=	http://download.osgeo.org/gdal/${PKGVERSION_NOREV}/
+
+MAINTAINER=	gdt@NetBSD.org
+#MAINTAINER+=	brook@nmsu.edu
 
 PATCHDIR=	${.CURDIR}/../../geography/gdal-lib/patches
 DISTINFO_FILE=	${.CURDIR}/../../geography/gdal-lib/distinfo
