--- a/net/filezilla/Makefile
+++ b/net/filezilla/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.107 2019/02/14 10:14:51 wiz Exp $
+# $NetBSD: Makefile,v 1.108 2019/03/09 19:45:13 gutteridge Exp $
 
-VERSION=	3.40.0
+VERSION=	3.41.1
 DISTNAME=	FileZilla_${VERSION}_src
 PKGNAME=	filezilla-${VERSION}
 CATEGORIES=	net x11
