--- a/x11/xfce4-screenshooter/Makefile
+++ b/x11/xfce4-screenshooter/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.26 2019/01/18 12:39:55 youri Exp $
+# $NetBSD: Makefile,v 1.27 2019/03/09 23:24:07 gutteridge Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	xfce4-screenshooter-1.9.3
+DISTNAME=	xfce4-screenshooter-1.9.4
 CATEGORIES=	misc
 MASTER_SITES=	http://archive.xfce.org/src/apps/xfce4-screenshooter/1.9/
 
