--- a/math/sundials/Makefile
+++ b/math/sundials/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2018/09/29 12:37:20 tnn Exp $
+# $NetBSD: Makefile,v 1.3 2019/03/10 02:30:06 wen Exp $
 
-DISTNAME=	sundials-3.1.1
-PKGREVISION=	1
+DISTNAME=	sundials-4.1.0
 CATEGORIES=	math
 MASTER_SITES=	https://computation.llnl.gov/projects/sundials/download/
 
@@ -23,7 +22,7 @@ post-extract:
 	${MKDIR} ${WRKSRC}
 
 post-install:
-	${MV} ${DESTDIR}${PREFIX}/LICENSE \
+	${MV} ${DESTDIR}${PREFIX}/include/sundials/LICENSE \
 		${DESTDIR}${PREFIX}/share/doc/${PKGBASE}
 	${INSTALL_DATA} ${WRKSRC}/../README.md ${WRKSRC}/../doc/*/* \
 		${DESTDIR}${PREFIX}/share/doc/${PKGBASE}
