--- a/www/py-django-cors-headers/Makefile
+++ b/www/py-django-cors-headers/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2019/03/01 12:48:09 adam Exp $
+# $NetBSD: Makefile,v 1.6 2019/03/10 15:27:07 adam Exp $
 
-DISTNAME=	django-cors-headers-2.4.1
+DISTNAME=	django-cors-headers-2.5.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/django-cors-headers/}
@@ -10,7 +10,7 @@ HOMEPAGE=	https://github.com/ottoyiu/django-cors-headers
 COMMENT=	Django application for handling headers required for CORS
 LICENSE=	mit
 
-DEPENDS+=	${PYPKGPREFIX}-django-[0-9]*:../../www/py-django
+DEPENDS+=	${PYPKGPREFIX}-django>=1.11:../../www/py-django
 
 USE_LANGUAGES=	# none
 
