--- a/devel/py-meson/Makefile
+++ b/devel/py-meson/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2019/03/08 11:34:49 prlw1 Exp $
+# $NetBSD: Makefile,v 1.18 2019/03/11 12:08:19 jperkin Exp $
 
 DISTNAME=	meson-0.49.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/meson/}
 
