--- a/lang/php72/Makefile
+++ b/lang/php72/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.16 2019/01/12 14:59:03 taca Exp $
+# $NetBSD: Makefile,v 1.17 2019/03/11 13:43:22 jperkin Exp $
 
 #
 # We can't omit PKGNAME here to handle PKG_OPTIONS.
 #
 PKGNAME=		php-${PHP_VERSION:S/RC/rc/}
+PKGREVISION=		1
 
 HOMEPAGE=		http://www.php.net/
 COMMENT=		PHP Hypertext Preprocessor version 7.2
