--- a/devel/py-coverage/Makefile
+++ b/devel/py-coverage/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2018/11/27 16:31:09 adam Exp $
+# $NetBSD: Makefile,v 1.17 2019/03/11 13:55:28 adam Exp $
 
-DISTNAME=	coverage-4.5.2
+DISTNAME=	coverage-4.5.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/coverage/}
@@ -10,18 +10,15 @@ HOMEPAGE=	https://coverage.readthedocs.io/
 COMMENT=	Python module that measures code coverage for Python
 LICENSE=	modified-bsd
 
-BUILD_DEPENDS+=	${PYPKGPREFIX}-greenlet-[0-9]*:../../devel/py-greenlet
-BUILD_DEPENDS+=	${PYPKGPREFIX}-mock-[0-9]*:../../devel/py-mock
-BUILD_DEPENDS+=	${PYPKGPREFIX}-nose-[0-9]*:../../devel/py-nose
-BUILD_DEPENDS+=	${PYPKGPREFIX}-unittest-mixins>=1.4:../../devel/py-unittest-mixins
+BUILD_DEPENDS+=	${PYPKGPREFIX}-test-runner-[0-9]*:../../devel/py-test-runner
+TEST_DEPENDS+=	${PYPKGPREFIX}-flaky>=3.4.0:../../devel/py-flaky
+TEST_DEPENDS+=	${PYPKGPREFIX}-test>=3.2.5:../../devel/py-test
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist>=1.20.1:../../devel/py-test-xdist
 
-USE_LANGUAGES=	c
+PYSETUPTESTTARGET=	pytest
 
 post-install:
 	${RM} -f ${DESTDIR}${PREFIX}/bin/coverage ${DESTDIR}${PREFIX}/bin/coverage[23]
-
-do-test:
-	cd ${WRKSRC} && nosetests-${PYVERSSUFFIX}
 
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
