--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1241 2019/02/16 16:23:04 bsiegert Exp $
+# $NetBSD: Makefile,v 1.1242 2019/03/11 16:28:58 kamil Exp $
 #
 
 COMMENT=	Networking tools
@@ -451,6 +451,7 @@ SUBDIR+=	openconnect
 SUBDIR+=	openh323
 SUBDIR+=	openntpd
 SUBDIR+=	openresolv
+SUBDIR+=	openrsync
 SUBDIR+=	openslp
 SUBDIR+=	openvmps
 SUBDIR+=	openvpn
