--- a/lang/ruby24-base/Makefile
+++ b/lang/ruby24-base/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2019/03/12 04:23:45 taca Exp $
+# $NetBSD: Makefile,v 1.11 2019/03/12 04:24:40 taca Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
+PKGREVISION=	1
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
