--- a/net/fstrm/Makefile
+++ b/net/fstrm/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2019/03/04 14:14:15 he Exp $
+# $NetBSD: Makefile,v 1.3 2019/03/12 08:53:23 he Exp $
 
-DISTNAME=	fstrm-0.4.0
+DISTNAME=	fstrm-0.5.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=farsightsec/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -9,7 +9,7 @@ GITHUB_TYPE=	tag
 MAINTAINER=	he@NetBSD.org
 HOMEPAGE=	https://github.com/farsightsec/fstrm/
 COMMENT=	C implementation of the Frame Streams data transport protocol
-LICENSE=	apache-2.0
+LICENSE=	mit
 
 USE_TOOLS+=	autoconf
 USE_TOOLS+=	automake
