--- a/misc/pick/Makefile
+++ b/misc/pick/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2019/02/28 19:27:43 leot Exp $
+# $NetBSD: Makefile,v 1.3 2019/03/12 19:02:45 leot Exp $
 
-DISTNAME=	pick-3.0.0
+DISTNAME=	pick-3.0.1
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mptre/}
 GITHUB_RELEASE=	v${PKGVERSION_NOREV}
@@ -14,9 +14,7 @@ HAS_CONFIGURE=	yes
 
 CONFIGURE_ENV+=	INSTALL=${INSTALL_PROGRAM:Q}
 CONFIGURE_ENV+=	INSTALL_MAN=${INSTALL_MAN:Q}
-
-MAKE_FLAGS+=	PREFIX=${PREFIX:Q}
-MAKE_FLAGS+=	MANDIR=${PKGMANDIR:Q}
+CONFIGURE_ENV+=	MANDIR=${PREFIX}/${PKGMANDIR}
 
 CFLAGS.NetBSD+=	-D_OPENBSD_SOURCE	# reallocarray(3), strtonum(3)
 
