--- a/x11/xplanet/Makefile
+++ b/x11/xplanet/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.87 2018/11/14 22:22:53 kleink Exp $
+# $NetBSD: Makefile,v 1.88 2019/03/13 01:10:20 gutteridge Exp $
 
 DISTNAME=	xplanet-1.3.0
 PKGREVISION=	5
@@ -10,7 +10,7 @@ HOMEPAGE=	http://xplanet.sourceforge.net/
 COMMENT=	Rotating rendered map of the Earth in X11 root window
 LICENSE=	gnu-gpl-v2
 
-USE_LANGUAGES=		c c++03
+USE_LANGUAGES=		c c++11
 USE_TOOLS+=		gmake pkg-config
 GNU_CONFIGURE=		yes
 CONFIGURE_ENV+=		PERL=${_ENV_PERL:Q}
