--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2804 2019/03/13 11:01:28 jaapb Exp $
+# $NetBSD: Makefile,v 1.2805 2019/03/13 11:04:04 jaapb Exp $
 #
 
 COMMENT=	Development utilities
@@ -844,6 +844,7 @@ SUBDIR+=	ocaml-ppx_sexp_conv
 SUBDIR+=	ocaml-ppx_sexp_message
 SUBDIR+=	ocaml-ppx_tools
 SUBDIR+=	ocaml-ppx_tools_versioned
+SUBDIR+=	ocaml-ppx_variants_conv
 SUBDIR+=	ocaml-ppxlib
 SUBDIR+=	ocaml-re
 SUBDIR+=	ocaml-react
