--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2806 2019/03/13 11:06:47 jaapb Exp $
+# $NetBSD: Makefile,v 1.2807 2019/03/13 11:16:19 jaapb Exp $
 #
 
 COMMENT=	Development utilities
@@ -830,6 +830,7 @@ SUBDIR+=	ocaml-parsexp
 SUBDIR+=	ocaml-ppx_assert
 SUBDIR+=	ocaml-ppx_base
 SUBDIR+=	ocaml-ppx_bench
+SUBDIR+=	ocaml-ppx_bin_prot
 SUBDIR+=	ocaml-ppx_compare
 SUBDIR+=	ocaml-ppx_custom_printf
 SUBDIR+=	ocaml-ppx_derivers
