--- a/devel/ocaml-ppx_expect/Makefile
+++ b/devel/ocaml-ppx_expect/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2019/03/13 11:19:15 jaapb Exp $
+# $NetBSD: Makefile,v 1.2 2019/03/13 11:21:33 jaapb Exp $
 
 GITHUB_PROJECT=	ppx_expect
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -27,4 +27,5 @@ OCAML_USE_DUNE=	yes
 .include "../../devel/ocaml-ppx_sexp_conv/buildlink3.mk"
 .include "../../devel/ocaml-ppx_variants_conv/buildlink3.mk"
 .include "../../devel/ocaml-ppxlib/buildlink3.mk"
+.include "../../devel/ocaml-re/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
